Fix spacing & slider dot

--- a/resources/styles/slick.css
+++ b/resources/styles/slick.css
@@ -21,3 +21,11 @@
 .package-slider .slick-dots {
   @apply mt-auto absolute bottom-0 mb-6 w-full;
 }
+
+.gallery-slider .slick-dots button {
+  background: rgba(209, 174, 90, 0.5);
+}
+
+.gallery-slider .slick-dots .slick-active button {
+  background: var(--bg-primary);
+}
